Revert "fix player image expand/collapse transition"
This reverts commit 1ab1aababf372697e58957f02109539be58b452e.

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -71,12 +71,10 @@
     margin: 0.6rem 0 0;
     transition: all 300ms;
     max-width: 260px;
-    transition: width 300ms;
 }
 
 .playerCard img.collapsed {
-    width: 0;
-    transition: all 0s;
+    width: 0%;
 }
 
 .playerCard p:first-of-type {
@@ -130,6 +128,10 @@
     width: 4px;
     margin: 0 auto;
     height: 6rem;
+}
+
+.playerCard img.collapsed {
+    display: none;
 }
 
 @media only screen and (prefers-contrast: no-preference) {
